--- a/2/2_2_lab/2_2_lab/2_2_lab.vcxproj
+++ b/2/2_2_lab/2_2_lab/2_2_lab.vcxproj
@@ -108,6 +108,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <HeapReserveSize>4194304</HeapReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
